[gd_scene load_steps=34 format=3 uid="uid://dlbrx3wkpeklw"]

[ext_resource type="Script" path="res://Scripts/Entities/Player/player.gd" id="1_ccdxd"]
[ext_resource type="Texture2D" uid="uid://cj3ajyhlqaors" path="res://Assets/Sprites/Player Sprite Sheet 2.png" id="2_d052l"]
[ext_resource type="Texture2D" uid="uid://b5g5svdxlmtwc" path="res://Assets/Sprites/Flashlight Texture 2.png" id="3_6pqve"]
[ext_resource type="Script" path="res://Scripts/Entities/Player/flashlight.gd" id="4_4ysew"]
[ext_resource type="AudioStream" uid="uid://h6ga6mlhkwub" path="res://Assets/Audio/Flashlight On.wav" id="5_llkm8"]
[ext_resource type="AudioStream" uid="uid://dt5og8k0ngdvx" path="res://Assets/Audio/Flashlight Off.wav" id="6_8vx38"]
[ext_resource type="Script" path="res://Scripts/Audio/footsteps.gd" id="7_6c8m2"]
[ext_resource type="AudioStream" uid="uid://bjvoundmpgpft" path="res://Assets/Audio/Footstep1.wav" id="8_hnvp6"]
[ext_resource type="AudioStream" uid="uid://bux8cdyog1fph" path="res://Assets/Audio/Footstep2.wav" id="9_t4247"]
[ext_resource type="AudioStream" uid="uid://bgpfl8byihmiv" path="res://Assets/Audio/Footstep3.wav" id="10_0xxb7"]
[ext_resource type="AudioStream" uid="uid://deq6du1rlm7fr" path="res://Assets/Audio/Footstep4.wav" id="11_c7r45"]
[ext_resource type="AudioStream" uid="uid://b2py1mj4t1v3e" path="res://Assets/Audio/Footstep5.wav" id="12_cjqqw"]
[ext_resource type="AudioStream" uid="uid://chsguxsk1tpi1" path="res://Assets/Audio/Footstep6.wav" id="13_6ll6f"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xa08e"]
atlas = ExtResource("2_d052l")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l822r"]
atlas = ExtResource("2_d052l")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a6e3o"]
atlas = ExtResource("2_d052l")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8j76"]
atlas = ExtResource("2_d052l")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y0rxw"]
atlas = ExtResource("2_d052l")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ndud"]
atlas = ExtResource("2_d052l")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dv8vw"]
atlas = ExtResource("2_d052l")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdh7y"]
atlas = ExtResource("2_d052l")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j574j"]
atlas = ExtResource("2_d052l")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7hoc"]
atlas = ExtResource("2_d052l")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vitof"]
atlas = ExtResource("2_d052l")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptn46"]
atlas = ExtResource("2_d052l")
region = Rect2(352, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwdu7"]
atlas = ExtResource("2_d052l")
region = Rect2(384, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k26re"]
atlas = ExtResource("2_d052l")
region = Rect2(416, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kai41"]
atlas = ExtResource("2_d052l")
region = Rect2(448, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ksxra"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xa08e")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l822r")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a6e3o")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8j76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y0rxw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ndud")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dv8vw")
}],
"loop": true,
"name": &"move_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdh7y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j574j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7hoc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vitof")
}],
"loop": true,
"name": &"move_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptn46")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwdu7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k26re")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kai41")
}],
"loop": true,
"name": &"move_up",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_10yne"]
radius = 11.0114

[sub_resource type="CircleShape2D" id="CircleShape2D_5aayc"]
radius = 28.0713

[sub_resource type="Animation" id="Animation_tyk8w"]
resource_name = "footsteps"
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Footsteps")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_footstep"
}, {
"args": [],
"method": &"play_footstep"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l2if3"]
_data = {
"footsteps": SubResource("Animation_tyk8w")
}

[node name="Player" type="CharacterBody2D" groups=["Player"]]
light_mask = 3
visibility_layer = 3
script = ExtResource("1_ccdxd")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ksxra")
animation = &"move_up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_10yne")

[node name="Interaction Components" type="Node2D" parent="."]

[node name="interactionArea" type="Area2D" parent="Interaction Components"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction Components/interactionArea"]
shape = SubResource("CircleShape2D_5aayc")

[node name="Flashlight" type="PointLight2D" parent="."]
position = Vector2(-5.68434e-14, 4)
rotation = -1.56771
scale = Vector2(0.379036, 0.344741)
energy = 0.7
shadow_enabled = true
texture = ExtResource("3_6pqve")
texture_scale = 2.66
script = ExtResource("4_4ysew")

[node name="Battery" type="Timer" parent="Flashlight"]
wait_time = 60.0
one_shot = true

[node name="ToggleTimer" type="Timer" parent="Flashlight"]
one_shot = true

[node name="OnSFX" type="AudioStreamPlayer" parent="Flashlight"]
stream = ExtResource("5_llkm8")
volume_db = -3.0
bus = &"SFX"

[node name="OffSFX" type="AudioStreamPlayer" parent="Flashlight"]
stream = ExtResource("6_8vx38")
volume_db = -3.0
bus = &"SFX"

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="Footsteps" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l2if3")
}
script = ExtResource("7_6c8m2")

[node name="Footstep1" type="AudioStreamPlayer2D" parent="Footsteps"]
stream = ExtResource("8_hnvp6")
bus = &"SFX"

[node name="Footstep2" type="AudioStreamPlayer2D" parent="Footsteps"]
stream = ExtResource("9_t4247")
bus = &"SFX"

[node name="Footstep3" type="AudioStreamPlayer2D" parent="Footsteps"]
stream = ExtResource("10_0xxb7")
bus = &"SFX"

[node name="Footstep4" type="AudioStreamPlayer2D" parent="Footsteps"]
stream = ExtResource("11_c7r45")
bus = &"SFX"

[node name="Footstep5" type="AudioStreamPlayer2D" parent="Footsteps"]
stream = ExtResource("12_cjqqw")
bus = &"SFX"

[node name="Footstep6" type="AudioStreamPlayer2D" parent="Footsteps"]
stream = ExtResource("13_6ll6f")
bus = &"SFX"

[connection signal="area_entered" from="Interaction Components/interactionArea" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="Interaction Components/interactionArea" to="." method="_on_interaction_area_area_exited"]
